<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/singleUserImage"
        android:layout_width="51dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/profilepic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/singleUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/display_name"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="21sp"
        app:layout_constraintStart_toEndOf="@+id/singleUserImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/singleUserStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:text="@string/default_status"
        android:textColor="@color/colorSecondary"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/singleUserImage"
        app:layout_constraintTop_toBottomOf="@+id/singleUserName" />

    <ImageView
        android:id="@+id/userOnlineIcon"
        android:layout_width="11dp"
        android:layout_height="12dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/todo"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/singleUserStatus"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/onlineicon" />
</androidx.constraintlayout.widget.ConstraintLayout>